--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deepmerge": "^4.3.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "nuqs": "^2.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
