--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.19",
+    "@ai-sdk/react": "^2.0.43",
     "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "^15.5.2",
+    "ai": "^5.0.43",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
@@ -19,6 +22,7 @@
     "nuqs": "^2.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "streamdown": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
