--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,21 @@
 {
-  "name": "Milind Mishra - Resume",
+  "name": "Milind Mishra – Resume",
   "short_name": "Milind Resume",
-  "description": "Product Engineer based in India - Interactive Resume",
+  "description": "Product Engineer based in India – Interactive Resume",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "icons": []
+  "icons": [
+    {
+      "src": "/icons/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
