feat: trying out a new font and adjusting some animations for the chat page

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "nuqs": "^2.5.2",
     "react": "19.1.0",
