feat: add clock and the chat w resume on the header

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/react": "^2.0.43",
     "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "^15.5.2",
+    "@number-flow/react": "^0.5.10",
     "ai": "^5.0.43",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
