feat: add ai devtools on chat page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk-tools/devtools": "^0.6.1",
     "@ai-sdk/groq": "^2.0.19",
     "@ai-sdk/react": "^2.0.43",
     "@microsoft/clarity": "^1.0.0",
