--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk-tools/devtools": "^0.6.1",
+    "@ai-sdk-tools/store": "^0.1.2",
     "@ai-sdk/groq": "^2.0.19",
     "@ai-sdk/react": "^2.0.43",
     "@microsoft/clarity": "^1.0.0",
