--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "19.1.0",
     "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
