--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "resume",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "print": "node scripts/resume-to-pdf.js"
   },
   "dependencies": {
     "@ai-sdk-tools/devtools": "^0.6.1",
@@ -37,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "puppeteer": "^24.22.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
