--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "print": "node scripts/resume-to-pdf.js"
+    "print": "node scripts/resume-to-pdf.js",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ai-sdk-tools/devtools": "^0.6.1",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "husky": "^9.1.7",
     "puppeteer": "^24.22.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
