--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "16.0.0-beta.0",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.5.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
