--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "16.0.0-beta.0",
     "@number-flow/react": "^0.5.10",
+    "@radix-ui/react-slot": "^1.2.3",
     "ai": "^5.0.43",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
