--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk-tools/devtools": "^0.6.1",
     "@ai-sdk-tools/store": "^0.1.2",
     "@ai-sdk/groq": "^2.0.19",
+    "@ai-sdk/openai": "^2.0.53",
     "@ai-sdk/react": "^2.0.43",
     "@calcom/embed-react": "^1.5.3",
     "@microsoft/clarity": "^1.0.0",
