--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
+    "fuse.js": "^7.1.0",
     "langsmith": "^0.3.72",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
