--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@ai-sdk/react": "^2.0.43",
     "@calcom/embed-react": "^1.5.3",
     "@microsoft/clarity": "^1.0.0",
-    "@next/third-parties": "16.0.0-beta.0",
+    "@next/third-parties": "16.0.0",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-slot": "^1.2.3",
     "ai": "^5.0.43",
@@ -30,7 +30,7 @@
     "langsmith": "^0.3.72",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "16.0.0-beta.0",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.5.2",
     "react": "19.2.0",
@@ -44,7 +44,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.1",
+    "@types/react-dom": "19.2.2",
     "husky": "^9.1.7",
     "puppeteer": "^24.22.3",
     "tailwindcss": "^4",
@@ -55,7 +55,7 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.2.2",
-      "@types/react-dom": "19.2.1"
+      "@types/react-dom": "19.2.2"
     }
   }
 }
