--- a/package.json
+++ b/package.json
@@ -21,22 +21,39 @@
     "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "16.0.0",
     "@number-flow/react": "^0.5.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@xyflow/react": "^12.9.3",
     "ai": "^5.0.43",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "deepmerge": "^4.3.1",
+    "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
     "langsmith": "^0.3.72",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
+    "nanoid": "^5.1.6",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.5.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "shiki": "^3.15.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
