--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nuqs": "^2.5.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hotkeys-hook": "^5.2.3",
     "shiki": "^3.15.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
