--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hotkeys-hook": "^5.2.3",
+    "react-syntax-highlighter": "^16.1.0",
     "shiki": "^3.15.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
@@ -62,6 +63,7 @@
     "@types/node": "^20",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "husky": "^9.1.7",
     "puppeteer": "^24.22.3",
     "tailwindcss": "^4",
