--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ai-sdk-tools/devtools": "^0.6.1",
-    "@ai-sdk-tools/store": "^0.1.2",
-    "@ai-sdk/groq": "^2.0.19",
-    "@ai-sdk/openai": "^2.0.53",
+    "@ai-sdk-tools/devtools": "^1.2.0",
+    "@ai-sdk-tools/store": "1.2.0",
+    "@ai-sdk/groq": "^3.0.22",
     "@ai-sdk/react": "^2.0.43",
     "@calcom/embed-react": "^1.5.3",
     "@microsoft/clarity": "^1.0.0",
@@ -32,12 +31,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@tanstack/react-query": "^5.90.20",
     "@xyflow/react": "^12.9.3",
-    "ai": "^5.0.43",
+    "ai": "^6.0.77",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "deepmerge": "^4.3.1",
+    "dexie": "^4.3.0",
     "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
     "langsmith": "^0.3.72",
@@ -50,12 +51,13 @@
     "react-dom": "19.2.0",
     "react-hotkeys-hook": "^5.2.3",
     "react-syntax-highlighter": "^16.1.0",
+    "remove-markdown": "^0.6.3",
     "shiki": "^3.15.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
-    "zod": "^4.1.5",
+    "zod": "^4.3.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
