--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@supermemory/tools": "^1.4.0",
     "@tanstack/react-query": "^5.90.20",
     "@xyflow/react": "^12.9.3",
     "ai": "^6.0.77",
