--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "shiki": "^3.15.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
+    "tjs": "^7.0.0",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1",
     "zod": "^4.3.6",
